Correct contrast issues with cancel link

--- a/tool_db/static/css/style.css
+++ b/tool_db/static/css/style.css
@@ -175,6 +175,10 @@ iframe:hover {
 }
 
 .cancel-link {
+    color: #505050;
+}
+
+.cancel-link:hover {
     color: #ef9a9a;
 }
 
